<resources>
    <string name="app_name">PacmanKotlin</string>
    <string name="points">Points: </string>
    <string name="level">Level </string>
    <string name="time">Time: </string>
    <string name="turn_right">Turn Right</string>
    <string name="turn_left">Turn Left</string>
    <string name="turn_up">Turn Up</string>
    <string name="turn_down">Turn Down</string>
    <string name="action_settings">Settings</string>
    <string name="newgame">New Game</string>
    <string name="reset">Reset</string>
    <string name="pause">Pause</string>
    <string name="Continue">Continue</string>
</resources>
