<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="org.pondar.pacmankotlin.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        tools:context="org.pondar.pacmankotlin.MainActivity">

        <TextView
            android:id="@+id/levelView"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:text="@string/level"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/pointsView"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:text="@string/points"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/timerView"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="75dp"
            android:text="@string/time"
            android:textSize="24sp" />

    </LinearLayout>


    <!-- Notice how the custom view is referenced here with
    a full package path-->
    <org.pondar.pacmankotlin.GameView
        android:id="@+id/gameView"
        android:layout_width="match_parent"
        android:layout_height="584dp">

    </org.pondar.pacmankotlin.GameView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        tools:context="org.pondar.pacmankotlin.MainActivity">

        <Button
            android:id="@+id/pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:text="@string/pause" />

        <Button
            android:id="@+id/cont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:text="@string/Continue" />

        <Button
            android:id="@+id/reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:text="@string/reset" />

    </LinearLayout>
</LinearLayout>
